# SASKI_Shadow

./: .env.example  .gitignore  AGENTS.md  HOW_TO_RUN_TESTS.md  INTEGRATION.md  README.md  SHADOW_FOLLOWUP.md  SYNC.md  pricing.example.json  pyproject.toml  saski_shadow_config.example.json
.github/workflows/: codeql.yml
docs/: CUSTOMER_REPORT_STANDARDS.md  HANDOFF.md  PACKAGE_SPEC.md  SAFE_CONTENT_GUIDE.md  SCHEMA_DEFINITIONS.md
registry-export/: README.md  laws.json
saski_shadow/: __init__.py  deployment.py  enums.py  evidence.py  hashing.py  types.py
saski_shadow/adapter/: __init__.py  result_to_turn.py
saski_shadow/aggregate/: report.py
saski_shadow/analyzer/: __init__.py  executor.py
saski_shadow/detectors/: __init__.py  adversarial.py  clinical_intent.py  distress.py  output_review.py  pii.py  policy.py
saski_shadow/integrations/: saski_sdk.py
saski_shadow/laws/: __init__.py  starter.py
saski_shadow/reporting/: __init__.py  html_report.py
saski_shadow/schemas/: envelope_v1.json  shadow_report_v1.json  transport_audit_v1.json
scripts/: _session_common.py  generate_report.py  run_session.py
tests/: conftest.py  test_adapter.py  test_analyzer.py  test_conftest_fixtures.py  test_crisis_outcomes.py  test_deployment.py  test_detectors.py  test_evidence.py  test_generate_report.py  test_hashing.py  test_html_report.py  test_laws.py  test_report.py  test_sdk_signals.py
tests/harness/: __init__.py  axis1_matching.py  axis2_detection.py  axis3_pipeline.py  axis4_live.py  axis5_triggers.py
tests/harness/fixtures/: __init__.py  canonical_session.py  extended_session.json
